fix dark mode

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 
-body {
+:root {
 	@apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
 }
 
